--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.13",
+    "qs": "^6.11.1",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.5.1",
+    "vue-router": "3.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
